/*
 *              Copyright (c) 2016-2019, Nuralogix Corp.
 *                      All Rights reserved
 *
 *      THIS SOFTWARE IS LICENSED BY AND IS THE CONFIDENTIAL AND
 *      PROPRIETARY PROPERTY OF NURALOGIX CORP. IT IS
 *      PROTECTED UNDER THE COPYRIGHT LAWS OF THE USA, CANADA
 *      AND OTHER FOREIGN COUNTRIES. THIS SOFTWARE OR ANY
 *      PART THEREOF, SHALL NOT, WITHOUT THE PRIOR WRITTEN CONSENT
 *      OF NURALOGIX CORP, BE USED, COPIED, DISCLOSED,
 *      DECOMPILED, DISASSEMBLED, MODIFIED OR OTHERWISE TRANSFERRED
 *      EXCEPT IN ACCORDANCE WITH THE TERMS AND CONDITIONS OF A
 *      NURALOGIX CORP SOFTWARE LICENSE AGREEMENT.
 */
 syntax = "proto3";

 import "google/api/annotations.proto";
 
 option cc_enable_arenas = true;
 option java_package = "ai.nuralogix.dfx.studysignals.v2";
 option java_outer_classname = "StudySignals";
 option go_package = "bitbucket.org/nuralogix/dfx-protobuffs-go/dfx/studysignals/v2;studysignals";
 option csharp_namespace = "Nuralogix.Dfx.Studysignals.V2";
 
 package dfx.studysignals.v2;
 
service API {
  rpc Create (CreateRequest) returns (CreateResponse) {
    option (google.api.http) = {
      post: "/api/v2/studysignals"
      body: "*"
    };
  }
  rpc Remove (RemoveRequest) returns (RemoveResponse) {
    option (google.api.http) = {
      delete: "/api/v2/studysignals/{id}"
    };
  }
  rpc Update (UpdateRequest) returns (UpdateResponse) {
    option (google.api.http) = {
      patch: "/api/v2/studysignals/{id}"
      body: "*"
    };
  }
  rpc RetrieveByStudyTemplateID (RetrieveByStudyTemplateIDRequest) returns (RetrieveByStudyTemplateIDResponse) {
    option (google.api.http) = {
      get: "/api/v2/studysignals/study-template/{study_template_id}"
    };
  }  
  rpc Retrieve (RetrieveRequest) returns (RetrieveResponse) {
      option (google.api.http) = {
        get: "/api/v2/studysignals/{id}"
      };
  }
  rpc RetrieveMultiple (RetrieveMultipleRequest) returns (RetrieveMultipleResponse) {
    option (google.api.http) = {
      post: "/api/v2/studysignals/retrieve-multiple"
      body: "*"
    };
  }
}
 
// Create
message CreateRequest {
  string study_template_id = 1;
  repeated string signal_ids = 2;
}
message CreateResponse {
  repeated string ids = 1;
}

// Update
message UpdateRequest {
  string id = 1;
  string study_template_id = 2;
  string signal_id = 3;
}
message UpdateResponse {}

// Remove
message RemoveRequest {
  string id = 1;
}
message RemoveResponse {}

// Retrieve
message RetrieveRequest {
  string id = 1;
}
message RetrieveResponse {
  StudySignal study_signal = 1;
}

// RetrieveByStudyTemplateID
message RetrieveByStudyTemplateIDRequest {
  string study_template_id = 1;
}
message RetrieveByStudyTemplateIDResponse {
  repeated string ids = 1;
}

// RetrieveMultiple
message RetrieveMultipleRequest {
  repeated string ids = 1;
}
message RetrieveMultipleResponse {
  repeated StudySignal study_signals = 1;
}

message StudySignal {
  string id = 1;
  string study_template_id = 2;
  string signal_id = 3;
}